playbook/file/rules.v4
# Generated by iptables-save v1.6.1 on Wed Oct  7 08:40:30 2020
*mangle
:PREROUTING ACCEPT [135625:7367763]
:INPUT ACCEPT [135123:7347366]
:FORWARD ACCEPT [4:336]
:OUTPUT ACCEPT [134748:7451041]
:POSTROUTING ACCEPT [134752:7451377]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Wed Oct  7 08:40:30 2020
# Generated by iptables-save v1.6.1 on Wed Oct  7 08:40:30 2020
*nat
:PREROUTING ACCEPT [137:5811]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [4:285]
:POSTROUTING ACCEPT [2:144]
-A POSTROUTING -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
-A POSTROUTING -o enp0s2 -j MASQUERADE
COMMIT
# Completed on Wed Oct  7 08:40:30 2020
# Generated by iptables-save v1.6.1 on Wed Oct  7 08:40:30 2020
*filter
:INPUT ACCEPT [3388:211868]
:FORWARD ACCEPT [2:168]
:OUTPUT ACCEPT [3193:226812]
-A INPUT -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A FORWARD -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A FORWARD -i virbr0 -o virbr0 -j ACCEPT
-A FORWARD -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i tap1 -j ACCEPT
-A OUTPUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
COMMIT
# Completed on Wed Oct  7 08:40:30 2020
